google_api_key = "AIzaSyBOti4mM-6x9WDnZIjIeyEU21OpBXqWBgw"
google_default_client_id = "77185425430.apps.googleusercontent.com"
google_default_client_secret = "OTJgUOQcT7lO7GsGZq2G4IlT"
target_cpu = "x86"
is_official_build = true
is_debug = false
dcheck_always_on = false
is_component_build = false
# remove_webcore_debug_symbols = true
symbol_level = 0
fieldtrial_testing_like_official_build = true
enable_google_now = true
enable_hotwording = false
enable_iterator_debugging = false
enable_nacl = true
ffmpeg_branding = "Chrome"
proprietary_codecs = true
enable_widevine = true
enable_hevc_demuxing = true
enable_ac3_eac3_audio_demuxing = true
enable_mse_mpeg2ts_stream_parser = true
enable_widevine = true
enable_webrtc = true
# rtc_use_h264 = true
rtc_use_lto = true
use_openh264 = true
enable_hangout_services_extension = true
# full_wpo_on_official = false
chrome_pgo_phase = 0


